# Chemical-Chatbot-Architectures

./: .gitignore  Dockerfile  README.md  pyproject.toml
Transkript_test/: __main__.py
chembencher/: __main__.py  collect_scores.py  model_wrapper.py  utils.py
ensemble/: README.md  __main__.py
ensemble_advanced/: __main__.py
ensemble_researcher/: README.md  __main__.py
ma_chemical_agent/: __main__.py  collaborator.py
ma_chemical_agent/tools/: core.py  pubchem.py  python.py  python_docs.py  rdkit.py
ma_coder_agent/: __init__.py  __main__.py
ma_core/: __init__.py  answerer.py  planner.py  supervisor.py  validator.py  worker.py
rag/: README.md  __main__.py
rag_reasoning/: README.md  __main__.py
reasoning/: README.md  __init__.py  __main__.py
